--- a/src/app/page/result/result.component.scss
+++ b/src/app/page/result/result.component.scss
@@ -23,15 +23,6 @@
   background-color: $background-gray !important;
 }
 
-.no-transition div {
-  -webkit-transition: all 0s 0s;
-  -moz-transition: all 0s 0s;
-  -o-transition: all 0s 0s;
-  //noinspection CssUnknownProperty
-  -ms-transition: all 0s 0s;
-  transition: all 0s 0s;
-}
-
 .disclaimer {
   font-size: 0.8em;
   margin: 1em 0;
@@ -59,13 +50,4 @@ h2 {
 ::ng-deep .ui-tooltip .ui-tooltip-text {
   background-color: $background-gray !important;
   color: white !important;
-}
-
-::ng-deep .ui-tooltip {
-  -webkit-transition: all 0s 0s;
-  -moz-transition: all 0s 0s;
-  -o-transition: all 0s 0s;
-  //noinspection CssUnknownProperty
-  -ms-transition: all 0s 0s;
-  transition: all 0s 0s;
 }
